AUT-53: Fixed issues from sonar and added new tests